--- a/pi_server/Cargo.toml
+++ b/pi_server/Cargo.toml
@@ -18,9 +18,9 @@ serde_yaml = "0"
 futures-util = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs"] }
 
-trust-dns-proto = "0.20.0"
-trust-dns-server = "0.20.0"
-trust-dns-resolver = { version = "0.20.0", features = ["dns-over-native-tls"] }
+trust-dns-proto = "0"
+trust-dns-server = { version = "0", features = ["trust-dns-resolver"] }
+trust-dns-resolver = { version = "0", features = ["dns-over-native-tls"] }
 
 sqlx = { version = "0.4", features = ["sqlite", "runtime-tokio-native-tls"] }
 
