--- a/pi_server/Cargo.toml
+++ b/pi_server/Cargo.toml
@@ -18,11 +18,13 @@ serde_yaml = "0"
 futures-util = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs"] }
 
+reqwest = { version = "0", features=["cookies"] }
+
 trust-dns-proto = "0"
 trust-dns-client = "0"
 trust-dns-server = "0"
 
-# sqlx = { version = "0", features = ["sqlite", "runtime-tokio"] }
+# sqlx = { version = "0", features = ["sqlite", "runtime-tokio-native-tls"] }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 jemallocator = "0"
