--- a/pi_server/Cargo.toml
+++ b/pi_server/Cargo.toml
@@ -18,13 +18,17 @@ serde_yaml = "0"
 futures-util = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs"] }
 
-reqwest = { version = "0", features=["cookies"] }
+reqwest = { version = "0", features = ["cookies"] }
 
 trust-dns-proto = "0"
 trust-dns-client = "0"
 trust-dns-server = "0"
 
+regex = "1"
+
+sqlx = { git = "https://github.com/ant32/sqlx.git", branch = "tokio-1.0", features = ["chrono", "runtime-tokio-native-tls", "sqlite"] }
 # sqlx = { version = "0", features = ["sqlite", "runtime-tokio-native-tls"] }
+# warp = "0"
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 jemallocator = "0"
