--- a/pi_client/package.json
+++ b/pi_client/package.json
@@ -8,10 +8,13 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@popperjs/core": "^2.6.0",
+    "apexcharts": "^3.23.1",
     "bootstrap": "^5.0.0-beta1",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1"
