--- a/pi_server/Cargo.toml
+++ b/pi_server/Cargo.toml
@@ -25,15 +25,15 @@ trust-dns-client = "0"
 trust-dns-server = "0"
 
 chrono = "0"
-sqlx = { git = "https://github.com/ant32/sqlx.git", branch = "tokio-1.0", features = ["runtime-tokio-rustls", "sqlite", "chrono", "all-types"] }
-#sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["runtime-tokio-rustls", "sqlite", "chrono", "all-types"] }
-warp = { git = "https://github.com/seanmonstar/warp", features = ["websocket"] }
+sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["runtime-tokio-rustls", "sqlite", "chrono", "all-types"] }
+warp = { git = "https://github.com/seanmonstar/warp", features = ["compression", "websocket"] }
 http = "0"
 mime_guess = "2"
 
+linked-hash-map = { version = "0", features = ["serde_impl"] }
 regex = "1"
-systemstat = { git = "https://github.com/myfreeweb/systemstat" }
 zip = "0"
+systemstat = { git = "https://github.com/myfreeweb/systemstat" }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 jemallocator = "0"
