--- a/pi_server/Cargo.toml
+++ b/pi_server/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = "1"
 serde_yaml = "0"
 
 futures-util = "0.3"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs", "time"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs", "time", "process"] }
 
 reqwest = { version = "0", features = ["cookies", "rustls"] }
 
