--- a/pi_client/package.json
+++ b/pi_client/package.json
@@ -10,27 +10,26 @@
   },
   "proxy": "http://localhost:8080",
   "dependencies": {
-    "@popperjs/core": "^2.6.0",
-    "apexcharts": "^3.23.1",
-    "bootstrap": "^5.0.0-beta1",
-    "react": "^17.0.1",
-    "react-apexcharts": "^1.3.7",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1"
+    "@popperjs/core": "2.11.2",
+    "apexcharts": "^3.33.0",
+    "bootstrap": "^5.1.3",
+    "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/bootstrap": "^5.0.5",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.12",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-router-dom": "^5.1.7",
-    "node-sass": "^4.14.1",
-    "typescript": "^4.1.3"
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/bootstrap": "^5.1.9",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.10",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "node-sass": "^7.0.1",
+    "typescript": "^4.5.5"
   },
   "eslintConfig": {
     "extends": [
