--- a/pi_server/Cargo.toml
+++ b/pi_server/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pi_server"
 version = "0.5.0"
 authors = ["Prashant Bhushan Singh <prashant.bhushansingh@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 anyhow = "1"
@@ -38,7 +38,7 @@ dht22 = { path = "../dht22" }
 rustlearn = "0"
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
-jemallocator = "0"
+tikv-jemallocator = "0"
 
 [build-dependencies]
 anyhow = "1"
