--- a/pi_server/Cargo.toml
+++ b/pi_server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pi_server"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Prashant Bhushan Singh <prashant.bhushansingh@gmail.com>"]
 edition = "2021"
 
@@ -25,8 +25,8 @@ trust-dns-client = { git = "https://github.com/bluejekyll/trust-dns.git" }
 trust-dns-server = { git = "https://github.com/bluejekyll/trust-dns.git" }
 
 chrono = "0"
-sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["runtime-tokio-rustls", "sqlite", "chrono", "all-types"] }
-warp = { git = "https://github.com/seanmonstar/warp", features = ["compression", "websocket"] }
+sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite", "chrono", "all-types"] }
+warp = { version = "0", features = ["compression", "websocket"] }
 http = "0"
 mime_guess = "2"
 
@@ -49,5 +49,4 @@ debug = 0
 
 [profile.release]
 lto = true
-# strip = true
 codegen-units = 1
