--- a/pi_server/Cargo.toml
+++ b/pi_server/Cargo.toml
@@ -14,25 +14,24 @@ log4rs = { version = "1", features = ["file_appender", "rolling_file_appender", 
 serde = "1"
 serde_json = "1"
 serde_yaml = "0"
-
-futures-util = "0"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs", "time", "process"] }
-
-reqwest = { version = "0", features = ["cookies", "rustls"] }
+chrono = "0"
 
 trust-dns-proto = { git = "https://github.com/bluejekyll/trust-dns.git" }
 trust-dns-client = { git = "https://github.com/bluejekyll/trust-dns.git" }
 trust-dns-server = { git = "https://github.com/bluejekyll/trust-dns.git" }
 
-chrono = "0"
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs", "time", "process"] }
+futures-util = "0"
+axum = { version = "0", features = ["ws"] }
 sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite", "chrono", "all-types"] }
-warp = { version = "0", features = ["compression", "websocket"] }
+reqwest = { version = "0", features = ["cookies", "rustls"] }
+
 http = "0"
 mime_guess = "2"
-
 linked-hash-map = { version = "0", features = ["serde_impl"] }
 regex = "1"
 zip = "0"
+
 systemstat = { git = "https://github.com/myfreeweb/systemstat" }
 dht22 = { path = "../dht22" }
 rustlearn = "0"
